Ruedas del reloj creadas
- Se han creado las ruedas del reloj que faltaban
- Se han posicionado con CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 	
 	<div id="content">
 		
-		<div id="seconds2" class="rueda">
+		<div id="hours1" class="rueda">
+			
+			<div class="card c0">0</div> 
+			<div class="card c1">1</div>
+			<div class="card c2">2</div>
+			<div class="card c3"></div>
+			<div class="card c4"></div>
+			<div class="card c5"></div>
+			<div class="card c6"></div>
+			<div class="card c7"></div>
+			<div class="card c8"></div>
+			<div class="card c9"></div>
+			
+		</div>
+
+		<div id="hours2" class="rueda">
 			
 			<div class="card c0">0</div> 
 			<div class="card c1">1</div>
@@ -27,8 +42,65 @@
 			
 		</div>
 
+		<div id="minutes1" class="rueda">
+			
+			<div class="card c0">0</div> 
+			<div class="card c1">1</div>
+			<div class="card c2">2</div>
+			<div class="card c3">3</div>
+			<div class="card c4">4</div>
+			<div class="card c5">5</div>
+			<div class="card c6"></div>
+			<div class="card c7"></div>
+			<div class="card c8"></div>
+			<div class="card c9"></div>
+						
+		</div>
 		
+		<div id="minutes2" class="rueda">
+			
+			<div class="card c0">0</div> 
+			<div class="card c1">1</div>
+			<div class="card c2">2</div>
+			<div class="card c3">3</div>
+			<div class="card c4">4</div>
+			<div class="card c5">5</div>
+			<div class="card c6">6</div>
+			<div class="card c7">7</div>
+			<div class="card c8">8</div>
+			<div class="card c9">9</div>
+			
+		</div>
+		
+		<div id="seconds1" class="rueda">
+			
+			<div class="card c0">0</div> 
+			<div class="card c1">1</div>
+			<div class="card c2">2</div>
+			<div class="card c3">3</div>
+			<div class="card c4">4</div>
+			<div class="card c5">5</div>
+			<div class="card c6"></div>
+			<div class="card c7"></div>
+			<div class="card c8"></div>
+			<div class="card c9"></div>
+						
+		</div>
 
+		<div id="seconds2" class="rueda">
+			
+			<div class="card c0">0</div> 
+			<div class="card c1">1</div>
+			<div class="card c2">2</div>
+			<div class="card c3">3</div>
+			<div class="card c4">4</div>
+			<div class="card c5">5</div>
+			<div class="card c6">6</div>
+			<div class="card c7">7</div>
+			<div class="card c8">8</div>
+			<div class="card c9">9</div>
+			
+		</div>
 
 	</div>
 
